test/kubernetes/e2e/features/cors/testdata/httproutes-cors.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: svc-route
spec:
  parentRefs:
    - name: gw
  hostnames:
    - "example.com"
  rules:
    - backendRefs:
        - name: simple-svc
          port: 8080
      matches:
      - path:
          type: PathPrefix
          value: /path1
      filters:
      - cors:
          allowOrigins:
          - https://notexample.com
          allowMethods:
          - GET
          allowHeaders:
          - x-custom-header
        type: CORS
