test/kubernetes/e2e/features/cors/testdata/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: svc-route
spec:
  parentRefs:
    - name: gw
  hostnames:
    - "example.com"
  rules:
    - backendRefs:
        - name: simple-svc
          port: 8080
      matches:
      - path:
          type: PathPrefix
          value: /path1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: svc-route-2
spec:
  parentRefs:
    - name: gw
  hostnames:
    - "example.com"
  rules:
    - name: rule0
      matches:
      - path:
          type: PathPrefix
          value: /path2    
      backendRefs:
        - name: simple-svc
          port: 8080
    - name: rule1
      matches:
      - path:
          type: PathPrefix
          value: /cors-disabled    
      backendRefs:
        - name: simple-svc
          port: 8080
