test/kubernetes/e2e/features/cors/testdata/tp-route-cors.yaml
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: route-cors-policy
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: svc-route
  cors:
    allowOrigins:
      - https://notexample.com
      - https://a.b.*
      - https://*.edu
    allowMethods:
      - GET
      - POST
      - DELETE
    allowHeaders:
      - x-custom-header
